--- a/render.yaml
+++ b/render.yaml
@@ -4,3 +4,5 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    branches: [main]
+    pullRequestPreview: false
